Rechanged group flows and included validations